<resources>
    <string name="app_name">UIDesignAssignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_email">Email</string>
    <string name="action_sms">SMS</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="flaction_add">Add</string>
    <string name="flaction_delete">Delete</string>
    <string name="flaction_settings">Settings</string>
    <string name="flaction_email">Email</string>
    <string name="flaction_sms">SMS</string>
</resources>
