<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/flaction_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/flaction_add" />
    <item
        android:id="@+id/flaction_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/flaction_delete" />
    <item
        android:id="@+id/flaction_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/flaction_settings" />
    <item
        android:id="@+id/flaction_email"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/flaction_email" />
    <item
        android:id="@+id/flaction_sms"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/flaction_sms" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
